--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "body-parser": "~1.15.1",
+    "browser-sync": "^2.16.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
-    "express": "~4.13.4",
+    "express": "^4.13.4",
+    "gulp": "^3.9.1",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "sequelize": "^3.24.3",
